updated html layout

--- a/style.css
+++ b/style.css
@@ -1,2 +1,2 @@
-/* button and container width */
-/* background colors and design */
+/* button and container width/style */
+/* background pictures/colors and design, fresh ingredients background pictures*/
