--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ nav {
 }
 
 section {
-  background-image: url(assets/img/pans.jpg);
+  background-image: url(../img/pans.jpg);
   background-size: cover;
   width: 100%;
   height: 900px;
