--- a/style.css
+++ b/style.css
@@ -4,12 +4,18 @@
 nav {
     background: #c4a966;
     padding: 0px 20px;
-    
-} 
+
+}
 
 section {
     background-image: url(assets/img/pans.jpg);
     background-size: cover;
     width: 100%;
     height: 900px;
+}
+
+.recipes-results {
+    margin-top: 28px;
+    margin-right: -35px;
+    margin-left: 10px
 }
