--- a/style.css
+++ b/style.css
@@ -13,3 +13,14 @@ section {
     width: 100%;
     height: 900px;
 }
+
+section.home {
+    background: #60dde5;
+    background-size: cover;
+    width: 100%;
+    height: 900px;
+}
+
+h4 {
+    color: white;
+}
