--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ nav {
 } 
 
 section {
-  background-image: url(assets/img/pans.jpg);
+  background-image: url(../img/pans.jpg);
   background-size: cover;
   width: 100%;
   height: 900px;
@@ -18,7 +18,7 @@ section.home {
   background: #60dde5;
   background-size: cover;
   width: 100%;
-  height: 900px;
+  height: auto;
 }
 
 h4 {
