--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ nav {
   background: #c4a966;
   padding: 0px 20px;
   
-} 
+}
 
 section {
   background-image: url(../img/pans.jpg);
@@ -18,9 +18,20 @@ section.home {
   background: #60dde5;
   background-size: cover;
   width: 100%;
-  height: auto;
+  height: 900px;
+}
+
+section.restaurants{
+  background-image: url(../img/restaurant.jpg);
+  background-size: cover;
+  width: 100%;
+  height: 900px; 
 }
 
 h4 {
   color: white;
+}
+
+footer{
+  padding: 0%
 }
